# TUFF-OS-Release

./: README.md  README_JP.md
.github/workflows/: kairo-win-smoke.yml
KAIRO-FW/: CHANGELOG.md  Cargo.toml  KAIRO_FW_REFERENCE.md  README.md  build-deb.sh  install.sh  kairo-fw_0.1.0-1_amd64.deb
KAIRO-FW/clear-mini/src/: api.rs  kairo_p.rs  lib.rs  time.rs  witness.rs
KAIRO-FW/deb/: SHA256SUMS  kairo-fw_0.2.0_all.deb  kairo-fw_0.3.0-1_amd64.deb
KAIRO-FW/debian/: changelog  control  install  rules
KAIRO-FW/debian/DEBIAN/: control
KAIRO-FW/debian/usr/share/kairo-fw/: README.md
KAIRO-FW/docs/: DEBIAN_PACKAGE.md  KAIROBOT_USAGE.md  KAIRO_ACL_EBNF.md  OPS_SMARTPHONE_MANUAL.md  openai_api_compatibility_plan.md  端末識別方法.txt
KAIRO-FW/docs/RFC/: mesh_hierarchy.md  mesh_ipv6.md  mesh_node_discovery.md  peer_review_failure_modes.md
KAIRO-FW/rust-core/: Cargo.toml  session_reuse.rs
KAIRO-FW/rust-core/src/: ai_tcp_packet_generated.rs  baseline_profile_manager.rs  compression.rs  connection_manager.rs  ephemeral_session_generated.rs  keygen.rs  lib.rs  log_recorder.rs  main.rs  mesh.rs  packet_parser.rs  session.rs
KAIRO-FW/rust-core/src/bot/: mod.rs
KAIRO-FW/rust-core/src/bot/core/: mod.rs
KAIRO-FW/rust-core/src/bot/plugin/: shell.rs
KAIRO-FW/rust-core/src/coordination/: api.rs  node_manager.rs  peer_review.rs  scope_manager.rs  service.rs
KAIRO-FW/rust-core/src/flatbuffers/: mod.rs
KAIRO-FW/rust-core/src/resolvers/: conflict_resolver.rs
KAIRO-FW/src/kairo-daemon/: Cargo.toml  config.rs  gpt_responder.rs  ingress_bridge.rs  kairo-daemon.service  kairo-fw.service  kairo_p  kairo_p_listener.rs  khp.rs  main.rs  p_structure_filter.rs  put_guard.rs  tracker.rs  vulkan_gpu.rs
KAIRO-FW/src/kairo-daemon/debian/: postinst
KAIRO-FW/src/kairo-daemon/shaders/: ai_probe.comp  audit_n.comp  audit_prefilter.comp  user_auth.comp
KAIRO-FW/src/kairo-lib/: Cargo.toml  comm.rs  config.rs  mesh_scope_manager.rs  packet.rs  registry.rs
KAIRO-FW/src/kairo-lib/src/: comm.rs
KAIRO-FW/src/kairo-lib/tests/: Cargo.toml
KAIRO-FW/src/kairof/: Cargo.toml
KAIRO-FW/tools/mythos_v9999/src/: main.rs
KAIRO-WIN/: Cargo.toml  KAIRO-ACL.txt  LICENSE  README.md  README_WIN.md  REFERENCE.md  SHA256SUMS  brutal_nw_test.py  install_win.ps1  verify_win_shield.sh
KAIRO-WIN/clear-mini/: Cargo.toml
KAIRO-WIN/clear-mini/src/: config.rs  cse_log.rs  detector.rs
KAIRO-WIN/clear-mini/src/ise/: mod.rs
KAIRO-WIN/config/: wau_thresholds.yml
KAIRO-WIN/docs/: RFC_AITCP_PACKET_v1.md  kairo_daemon_api.md
KAIRO-WIN/docs/Guidelines/: GG01_operational_practices.md
KAIRO-WIN/docs/RFC/: AI-TCP_RFC_mesh_layered_architecture.md
KAIRO-WIN/docs/agent_configs/: 10.0.0.2.json
KAIRO-WIN/release/: BRUTAL_TEST_REPORT.md  LICENSE  README_ARIMA.md  README_EN.md
KAIRO-WIN/rust-core/benches/: benchmark_flatbuffers.rs
KAIRO-WIN/rust-core/src/: error.rs  force_disconnect.rs  fw_filter.rs  mesh_auditor.rs  mesh_trust_calculator.rs  packet_signer.rs  packet_validator.rs  rate_control.rs  signature.rs
KAIRO-WIN/rust-core/src/bot/api/: mod.rs  receiver.rs  status.rs
KAIRO-WIN/rust-core/src/coordination/: mod.rs  models.rs
KAIRO-WIN/rust-core/src/flatbuffers/: ai_tcp_packet_generated.rs  ephemeral_session_generated.rs
KAIRO-WIN/src/kairo-installer/src/: main.rs
KAIRO-WIN/src/kairo-probe/: Cargo.toml
KAIRO-WIN/src/kairo-probe/src/: main.rs
KAIRO-WIN/src/kairo-win-f/: Cargo.toml  lib.rs  main.rs
KAIRO-WIN/src/kairo-win-lib/: error.rs  lib.rs  packet_parser.rs  wau_config.rs
KAIRO-WIN/src/kairo-win-lib/resolvers/: conflict_resolver.rs  mod.rs
KAIRO-WIN/src/kairo-win-lib/tests/: conflict_resolver_test.rs
KAIRO-WIN/src/kairo-win-service/: Cargo.toml  build.rs  clear_mini_state.rs  cse.rs  filter.rs  gpt_log_processor.rs  handle_send.rs  handler.rs  ip_classifier.rs  ipc.rs  lib.rs  main.rs  matcher.rs  p_registry.rs  p_signature_validator.rs  remote_guard.rs  routing_bridge.rs  secure_log.rs  state.rs  task_queue.rs  wfp_shim.rs  witness_ext.rs
KAIRO-WIN/src/kairo-win-service/api/: controller.rs
KAIRO-WIN/src/kairo-win-service/shaders/: packet_prefilter.comp
KAIRO-WIN/tests/: qa_n_redundancy.py  qa_sentinel_collision.py  qa_triple_wipe.py  test_ethical_flow.py
KAIRO-WIN/tests/src-kairo-striker/: Cargo.toml
KAIRO-WIN/tests/src-kairo-striker/src/: main.rs  nw_attack.rs
KAIRO-WIN/tools/mythos_v9999/: Cargo.toml
MANUALS/: Backup_Creation_Recommended_Order.md  Isolation_Mode_Operational_Examples.md  Performance_and_Integrity_Verification.md  TUFF-FS_Emergency_Area_Spec.md  TUFF-OS_Detailed_Technical_Manual.md  TUFF-OS_General_Manual.md  TUFF-OS_Installation_Guide_User.md  TUFF-OS_Isolation_Mode_Deep_Dive.md  TUFF-OS_Security_Implementation_Overview_Diagram.md  TUFF-OS_Troubleshooting_Guide.md  TUFF-OS_Uninstallation_Guide.md  tuffutl_Command_Reference_Backend_Specs_v1.0.md  tuffutl_Command_Reference_User_Admin_v1.0.md  tuffutl_Web-UI_User_Reference.md
archive/v1.0.0/docs/: TUFF-OS_Detailed_Technical_Manual.md  TUFF-OS_General_Manual.md
archive/v1.0.0/docs/jp/: TUFF-OS アンインストール手順書.md  TUFF-OS インストール手順書（ユーザー向け）.md  TUFF-OS 総合説明書.md  TUFF-OS 詳細説明書（技術的説明書）.md
kairo-pal/p0-rc0/deb/: INSTALL_NOTES.md  SHA256SUMS  kairo-pal-p0-security-package_0.1.0+6fff3d41_amd64.deb  manifest.json
latest/: TUFF-OS-latest.iso.sigv1  update-metadata.json
マニュアル/: Isolationモード 運用例（実運用シナリオ）.md  TUFF-FS の避難領域（Emergency Area）.md  TUFF-OS Isolationモード 詳細説明.md  TUFF-OS アンインストール手順書.md  TUFF-OS トラブルシューティング集.md  TUFF-OS 総合セキュリティ実装 概要図.md  TUFF-OS 総合説明書.md  TUFF-OS 詳細説明書（技術的説明書）.md  tuffutl コマンドリファレンス & バックエンド仕様 詳細資料 v1.0.md  tuffutl コマンドリファレンス（ユーザー・管理者向け） v1.0.md  バックアップ作成手順（推奨順）.md  パフォーマンスと整合性の実証.md  統合管理マネージャ「tuffutl」ユーザリファレンス（上位Web-UI版）.md
(+15 files in other folders)
