# ./rust-core/Cargo.toml
[package]
name = "kairo_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kairo_core_cli"
path = "src/main.rs"

[dependencies]
flatbuffers = "25.2.10"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
warp = "0.3"
thiserror = "1.0"
bytes = "1.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.7.0"
