[package]
name="clear-mini"
version="0.1.0"
edition="2021"

[dependencies]
once_cell="1.20"
serde={version="1.0",features=["derive"]}
sha2="0.10"
hmac="0.12"
rand="0.8"
smallvec="1"
crc32fast="1"
axum={version="0.6",features=["json"]}
tokio={version="1",features=["rt-multi-thread","macros"]}
serde_json="1.0"
hex="0.4"
