[package]
name = "kairo-fw"
version = "0.1.0"
edition = "2021"
description = "KAIRO Firewall - High-speed AI-proxy firewall with Vulkan-acceleration (Ethics-free)"
maintainer = "TUFF-OS Project"

[package.metadata.deb]
name = "kairo-fw"
maintainer = "TUFF-OS Project <support@tuff-os.local>"
copyright = "2026, TUFF-OS Project"
license-file = ["../../LICENSE"]
depends = "$auto, libvulkan1"
section = "net"
priority = "optional"
assets = [
    ["../../target/release/kairo-fw-daemon", "usr/bin/kairo-fw-daemon", "755"],
    ["../../target/release/kairo-fw", "usr/bin/kairo-fw", "755"],
    ["../../KAIRO_FW_REFERENCE.md", "usr/share/doc/kairo-fw/REFERENCE.md", "644"],
    ["kairo-fw.service", "lib/systemd/system/kairo-fw.service", "644"],
]
maintainer-scripts = "debian"

[lib]
path = "lib.rs"

[[bin]]
name = "kairo-fw-daemon"
path = "main.rs"

[dependencies]
once_cell = "1.20"
log = "0.4"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
kairo_lib = { path = "../kairo-lib" }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
hex = "0.4"
ipnet = "2.10"
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
clear-mini = { path = "../../clear-mini" }
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
aho-corasick = "1.1"
md5 = "0.7"
ash = "0.37"
tokio-tungstenite = "0.21"

[build-dependencies]
shaderc = "0.8"
