# src/kairo-lib/Cargo.toml
[package]
name = "kairo_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ed25519-dalek = "2"
hex = "0.4"
rand = "0.8"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

kairo_core = { path = "../../rust-core" }

[lib]
path = "lib.rs"
