[package]
name = "kairo-win-service"
version = "0.1.0"
edition = "2021"
description = "KAIRO-WIN - Windows Service version of KAIRO Firewall with WFP Shim"
maintainer = "TUFF-OS Project"

[dependencies]
once_cell = "1.20"
log = "0.4"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
kairo-win-lib = { path = "../kairo-win-lib" }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
hex = "0.4"
ipnet = "2.10"
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
clear-mini = { path = "../../clear-mini" }
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
aho-corasick = "1.1"
md5 = "0.7"
ash = "0.37"
tokio-tungstenite = "0.21"

# Windows-specific dependencies
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[build-dependencies]
shaderc = "0.8"
