[package]
name = "kairo-striker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-44"] }
hex = "0.4"
kairo_lib = { path = "../../../../TUFF-KAIRO/KAIRO-APP/src/kairo-lib" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread", "sync", "time"] }
tuff-core = { path = "../../../../tuff-core" }
url = "2"
